ecs render single asteroid shape at screen center lol

--- a/pygames/asteroids/asteroids_ecs.ipynb
+++ b/pygames/asteroids/asteroids_ecs.ipynb
@@ -10,13 +10,23 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### **Import Libraries and Init Globals**\n",
+    "- `on_awake   ` (init_game => screen, refresh, load assets ... etc)\n",
+    "- `on_exit    ` (close_app => clear memory and shut down cpu/sys ... etc)"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pygame\n",
-    "from typing import NamedTuple\n",
+    "from typing import NamedTuple, Tuple, List\n",
     "import os\n",
     "import sys\n",
     "\n",
@@ -88,15 +98,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "ECS Refactor"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Entity"
+    "#### -- [ENTITY] --\n",
+    "***"
    ]
   },
   {
@@ -122,25 +125,42 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Component"
+    "#### -- [COMPONENT] --\n",
+    "***"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Component Base"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Create component classes\n",
     "# These classes should ONLY contain data, NO METHODS\n",
+    "\n",
+    "# transforms\n",
     "class Position:\n",
     "    def __init__(self, x, y):\n",
     "        self.x = x\n",
     "        self.y = y\n",
     "\n",
+    "# state\n",
     "class Health:\n",
     "    def __init__(self, health):\n",
-    "        self.health = health"
+    "        self.health = health\n",
+    "\n",
+    "# graphics\n",
+    "class Shape:\n",
+    "    def __init__(self, points:List[Tuple[float,float]]):\n",
+    "        self.points = points"
    ]
   },
   {
@@ -216,12 +236,51 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "System\n"
+    "#### -- [ASSETS] --"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Generate"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import math\n",
+    "from numpy import random\n",
+    "\n",
+    "def generate_asteroid_points(size, num_points)-> List[Tuple[float,float]]:\n",
+    "    points = []\n",
+    "    angle = 2 * math.pi/num_points\n",
+    "\n",
+    "    for i in range(num_points):\n",
+    "        length = random.randint(int(size * 0.5), size)\n",
+    "        x = length * math.cos(angle * i)\n",
+    "        y = length * math.sin(angle * i)\n",
+    "        points.append((x,y))\n",
+    "\n",
+    "    return points"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### -- [SYSTEM]--\n",
+    "***\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,11 +299,26 @@
     "        self.screen = screen\n",
     "        self.clock = clock\n",
     "\n",
-    "    def update(self):\n",
+    "    def update(self, component_manager):\n",
     "        # Fill the screen with the background color\n",
     "        rgb_random = (random.randint(0, 255), random.randint(0, 255), random.randint(0, 255))\n",
     "        # self.screen.fill(RENDER_CONTEXT.BACKGROUND_COLOR)\n",
     "        self.screen.fill(rgb_random)\n",
+    "\n",
+    "        # Render all entities with a position and points component\n",
+    "        entities = component_manager.get_entities_with_component(Shape)\n",
+    "        for entity in entities:\n",
+    "            position = component_manager.get_component(entity, Position)\n",
+    "            if(position is None): \n",
+    "                continue\n",
+    "            x,y = position.x, position.y\n",
+    "            shape = component_manager.get_component(entity, Shape)\n",
+    "            pygame.draw.polygon(\n",
+    "            self.screen, \n",
+    "            (255, 255, 255), \n",
+    "            [(x+px, y+py) for px,py in shape.points], \n",
+    "            1\n",
+    "        )\n",
     "\n",
     "        # Update the display\n",
     "        pygame.display.update()\n",
@@ -258,12 +332,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "On_Update"
+    "#### -- [RUNTIME] --\n",
+    "***"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -274,12 +349,15 @@
     "render_system = RenderSystem(context_sys.screen, context_sys.clock)\n",
     "\n",
     "# Create entities and components\n",
-    "player = Entity()\n",
-    "player_position = Position(0, 0)\n",
-    "player_health = Health(100)\n",
+    "asteroid = Entity()\n",
+    "asteroid_position = Position(320, 240)\n",
+    "asteroid_health = Health(100)\n",
+    "asteroid_points = generate_asteroid_points(100, 10)\n",
+    "asteroid_shape = Shape(asteroid_points)\n",
     "\n",
-    "component_manager.add_component(player, player_position)\n",
-    "component_manager.add_component(player, player_health)\n",
+    "component_manager.add_component(asteroid, asteroid_position)\n",
+    "component_manager.add_component(asteroid, asteroid_health)\n",
+    "component_manager.add_component(asteroid, asteroid_shape)\n",
     "\n",
     "# Main game loop\n",
     "while True:\n",
@@ -297,10 +375,79 @@
     "        # Update positions\n",
     "        movement_system.update(component_manager, 0.016)\n",
     "        # Update the display\n",
-    "        render_system.update()\n",
+    "        render_system.update(component_manager)\n",
     "            \n",
     "    except SystemExit:\n",
     "        break"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### -- [FOOTNOTES] --\n",
+    "***"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Explain `type checking` in python\n",
+    "***\n",
+    "\n",
+    "Some key points:\n",
+    "\n",
+    "1. Type hints only `optionally enforce types` - you need a separate type  \n",
+    "checking tool. But they `clearly document the expected types` for your function.\n",
+    "\n",
+    "2. You can specify types for all function arguments and the return value.\n",
+    "\n",
+    "3. Use List[type] to denote a list of elements of type type.\n",
+    "\n",
+    "4. Use Tuple[type1, type2] to denote a tuple with two elements of types type1 and type2.\n",
+    "\n",
+    "5. You can use int, str, float, bool, etc. to specify basic types. And List,  \n",
+    "Tuple, Dict to specify compound types.\n",
+    "\n",
+    "6. Type hints `do not affect runtime behavior` - they only provide `static`  \n",
+    "type checks.\n",
+    "\n",
+    "7. You can use a tool like `mypy` to actually `run the type checks and enforce`  \n",
+    "the hints. \n",
+    "\n",
+    "8. Specifying strict type hints makes your code more robust, documented and  \n",
+    "catch bugs early. \n",
+    "\n",
+    "You can use type checking to ensure that a function only accepts a list of  \n",
+    "points (x, y coordinates). You can do it like this:\n",
+    "\n",
+    "```python\n",
+    "from typing import List, Tuple\n",
+    "\n",
+    "def function_name(points: List[Tuple[int, int]]) -> None:\n",
+    "  \"\"\"Only accepts a list of (x, y) point tuples\"\"\"\n",
+    "  # Function logic here \n",
+    "```\n",
+    "\n",
+    "This uses Type Hints to specify that the points argument must be a List of  \n",
+    "Tuples, where each Tuple has two int elements. \n",
+    "So these would be valid calls:\n",
+    "\n",
+    "```python\n",
+    "function_name([(1, 2), (3, 4)]) \n",
+    "function_name([[1, 2], [3, 4]])  # Also ok, treats each sublist as a point\n",
+    "```\n",
+    "\n",
+    "But these would throw a TypeError:\n",
+    "\n",
+    "```python\n",
+    "function_name((1, 2, 3))  # Not a list \n",
+    "function_name([(1, '2')])  # Not ints \n",
+    "function_name(['string', 'list'])  # Not tuples\n",
+    "```"
    ]
   }
  ],
