--- a/pygames/asteroids/asteroids_ecs.ipynb
+++ b/pygames/asteroids/asteroids_ecs.ipynb
@@ -21,12 +21,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pygame\n",
-    "from typing import NamedTuple, Tuple, List\n",
+    "from typing import NamedTuple, Tuple, List, Type\n",
     "import os\n",
     "import sys\n",
     "\n",
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,19 +187,25 @@
     "        pass\n",
     "\n",
     "    @abstractmethod\n",
-    "    def remove_component(self, entity, component_type):\n",
+    "    def remove_component(self, entity, component_type: Type):\n",
     "        'Remove a component of a specific type from an entity'\n",
     "        pass\n",
     "\n",
     "    @abstractmethod\n",
-    "    def get_component(self, entity, component_type):\n",
+    "    def get_component(self, entity, component_type: Type):\n",
     "        'Get a component of a specific type from an entity'\n",
     "        pass\n",
     "\n",
     "    @abstractmethod\n",
-    "    def get_entities_with_component(self, component_type):\n",
-    "        'Get a list of entities that have a component of a specific type'\n",
+    "    def get_entities_with_component(self, component_type: Type):\n",
+    "        'Get a list of entities that have A SINGLE SPECIFIC COMPONENT type'\n",
     "        pass\n",
+    "\n",
+    "    @abstractmethod\n",
+    "    def get_entities_with_components(self, component_types: List[Type]):\n",
+    "        'Get a list of entities that have ALL of the specified COMPONENTS'\n",
+    "        pass\n",
+    "\n",
     "\n",
     "# Implement a simple ComponentManager class that manages a dictionary of components\n",
     "class ComponentManager(ComponentManagerInterface):\n",
@@ -216,17 +222,31 @@
     "        # if it does not exist : greatly simplifies the code\n",
     "        self.components[entity.id][type(component)] = component\n",
     "\n",
-    "    def remove_component(self, entity, component_type):\n",
+    "    def remove_component(self, entity, component_type:Type):\n",
     "        if entity.id in self.components and component_type in self.components[entity.id]:\n",
     "            del self.components[entity.id][component_type]\n",
     "\n",
-    "    def get_component(self, entity, component_type):\n",
+    "    def get_component(self, entity, component_type:Type):\n",
     "        return self.components[entity.id].get(component_type, None)\n",
-    "\n",
-    "    def get_entities_with_component(self, component_type):\n",
+    "    \n",
+    "    def get_entities_with_component(self, component_type:Type):\n",
     "        entities = []\n",
     "        for entity_id, components in self.components.items():\n",
-    "            if component_type in components:\n",
+    "            if component_type in components:    \n",
+    "                entities.append(Entity(entity_id))\n",
+    "        return entities\n",
+    "\n",
+    "    # @audit 🛑 : easy to confuse with `get_entities_with_component`(singular)\n",
+    "    # Explain how to fix this issue ^\n",
+    "    def get_entities_with_components(self, component_types:List[Type]):\n",
+    "        entities = []\n",
+    "        for entity_id, components in self.components.items():\n",
+    "            has_all_components = True\n",
+    "            for type in component_types:\n",
+    "                if type not in components:\n",
+    "                    has_all_components = False\n",
+    "                    break\n",
+    "            if has_all_components:\n",
     "                entities.append(Entity(entity_id))\n",
     "        return entities\n"
    ]
@@ -280,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -299,18 +319,20 @@
     "        self.screen = screen\n",
     "        self.clock = clock\n",
     "\n",
-    "    def update(self, component_manager):\n",
-    "        # Fill the screen with the background color\n",
+    "    def _fill_background(self):\n",
     "        rgb_random = (random.randint(0, 255), random.randint(0, 255), random.randint(0, 255))\n",
     "        # self.screen.fill(RENDER_CONTEXT.BACKGROUND_COLOR)\n",
     "        self.screen.fill(rgb_random)\n",
     "\n",
+    "    def update(self, component_manager):\n",
+    "        self._fill_background()\n",
+    "\n",
+    "        # get entities with POSITION (where) AND SHAPE (what) to render\n",
+    "        entities = component_manager.get_entities_with_components((Shape, Position))\n",
+    "\n",
     "        # Render all entities with a position and points component\n",
-    "        entities = component_manager.get_entities_with_component(Shape)\n",
     "        for entity in entities:\n",
     "            position = component_manager.get_component(entity, Position)\n",
-    "            if(position is None): \n",
-    "                continue\n",
     "            x,y = position.x, position.y\n",
     "            shape = component_manager.get_component(entity, Shape)\n",
     "            pygame.draw.polygon(\n",
@@ -322,7 +344,6 @@
     "\n",
     "        # Update the display\n",
     "        pygame.display.update()\n",
-    "\n",
     "        # Limit the frame rate\n",
     "        self.clock.tick(RENDER_CONTEXT.FPS)\n"
    ]
@@ -338,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
