Draw a ship shape lol

--- a/pygames/asteroids/asteroids_ecs.ipynb
+++ b/pygames/asteroids/asteroids_ecs.ipynb
@@ -294,23 +294,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
     "import math\n",
     "from numpy import random\n",
     "\n",
-    "def generate_asteroid_points(size, num_points)-> List[Tuple[float,float]]:\n",
+    "def generate_circle(radius, num_points, func=lambda x:x)-> List[Tuple[float,float]]:\n",
+    "    'return a list of points that form a circle'\n",
     "    points = []\n",
     "    angle = 2 * math.pi/num_points\n",
     "\n",
     "    for i in range(num_points):\n",
-    "        length = random.randint(int(size * 0.5), size)\n",
+    "        # length = random.randint(int(radius * 0.5), radius)\n",
+    "        length = func(radius)\n",
     "        x = length * math.cos(angle * i)\n",
     "        y = length * math.sin(angle * i)\n",
     "        points.append((x,y))\n",
     "\n",
+    "    return points\n",
+    "\n",
+    "def generate_asteroid(radius, num_points) -> List[Tuple[float,float]]:\n",
+    "    'return a list of points that form an asteroid by adding noise to radius'\n",
+    "    noise_lambda = lambda x: random.randint(int(x*0.5), x)\n",
+    "    points = generate_circle(radius, num_points, noise_lambda)\n",
+    "    return points\n",
+    "\n",
+    "def generate_ship(radius) -> List[Tuple[float,float]]:\n",
+    "    'return a list of points that form a ship'\n",
+    "    points = generate_circle(radius, 3)\n",
     "    return points"
    ]
   },
@@ -327,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -386,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -396,16 +409,27 @@
     "movement_system = MovementSystem()\n",
     "render_system = RenderSystem(context_sys.screen, context_sys.clock)\n",
     "\n",
-    "# Create entities and components\n",
+    "# Create asteroid\n",
     "asteroid = Entity()\n",
     "asteroid_position = Position(320, 240)\n",
     "asteroid_health = Health(100)\n",
-    "asteroid_points = generate_asteroid_points(100, 10)\n",
+    "asteroid_points = generate_asteroid(100, 10)\n",
     "asteroid_shape = Shape(asteroid_points)\n",
     "\n",
     "component_manager.add_component(asteroid, asteroid_position)\n",
     "component_manager.add_component(asteroid, asteroid_health)\n",
     "component_manager.add_component(asteroid, asteroid_shape)\n",
+    "\n",
+    "# Create ship\n",
+    "ship = Entity()\n",
+    "ship_position = Position(320, 240)\n",
+    "ship_health = Health(1)\n",
+    "ship_points = generate_ship(50)\n",
+    "ship_shape = Shape(ship_points)\n",
+    "\n",
+    "component_manager.add_component(ship, ship_position)\n",
+    "component_manager.add_component(ship, ship_health)\n",
+    "component_manager.add_component(ship, ship_shape)\n",
     "\n",
     "# Main game loop\n",
     "while True:\n",
