--- a/pygames/asteroids/asteroids_ecs.ipynb
+++ b/pygames/asteroids/asteroids_ecs.ipynb
@@ -21,12 +21,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pygame\n",
-    "from typing import NamedTuple, Tuple, List, Type\n",
+    "from typing import NamedTuple, Tuple, List, Type, Callable\n",
     "import os\n",
     "import sys\n",
     "\n",
@@ -57,11 +57,11 @@
     ")\n",
     "\n",
     "def on_awake()-> SystemContext:\n",
-    "    ''' \n",
+    "    \"\"\"\n",
     "    Initialize pygame\n",
     "    - SYS_SCREEN\n",
     "    - SYS_CLOCK\n",
-    "    '''\n",
+    "    \"\"\"\n",
     "    # Initialize pygame\n",
     "    pygame.init()\n",
     "    # Initialize the screen\n",
@@ -86,9 +86,7 @@
     "    return SystemContext(screen, clock)\n",
     "\n",
     "def on_exit() -> None :\n",
-    "    ''' \n",
-    "    Handle exit event\n",
-    "    '''\n",
+    "    \"\"\"Handle exit event\"\"\"\n",
     "    pygame.quit()\n",
     "    sys.exit()"
    ]
@@ -105,15 +103,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
     "import uuid\n",
     "\n",
-    "# Implement a simple Entity class that manages a unique identifier for each entity\n",
     "class Entity:\n",
     "    def __init__(self, id=None):\n",
+    "        \"\"\"Simple Entity class with a unique identifier for each entity\"\"\"\n",
     "        self.id = id or self.generate_unique_id()\n",
     "\n",
     "    @staticmethod\n",
@@ -142,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,6 +152,15 @@
     "    def __init__(self, x, y):\n",
     "        self.x = x\n",
     "        self.y = y\n",
+    "\n",
+    "class Rotation:\n",
+    "    def __init__(self, angle):\n",
+    "        self.angle = angle\n",
+    "\n",
+    "class Velocity:\n",
+    "    def __init__(self, vx, vy):\n",
+    "        self.vx = vx\n",
+    "        self.vy = vy\n",
     "\n",
     "# state\n",
     "class Health:\n",
@@ -185,39 +192,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
     "from abc import ABC, abstractmethod\n",
     "from collections import defaultdict\n",
+    "from typing import TypeVar, Type, List, Generic\n",
+    "\n",
+    "# `TypeVar` is a class from the `typing` module. It is used to create a generic  \n",
+    "# type variable `T`. This allows you to define a function that works with any \n",
+    "# type, while still providing type hints for better code readability and \n",
+    "# editor support.\n",
+    "T = TypeVar('T')\n",
     "\n",
     "# Pythonic to name suffix ABC for abstract base classes, instead of `Interface``\n",
     "class ComponentManagerABC(ABC):\n",
     "    '''Interface for a Component Manager Class'''\n",
     "    @abstractmethod\n",
     "    def add_component(self, entity, component) -> None:\n",
-    "        'Add a component to an entity'\n",
+    "        \"\"\"Add a component to an entity\"\"\"\n",
     "        pass\n",
     "\n",
     "    @abstractmethod\n",
     "    def remove_component(self, entity, component_type: Type) -> None:\n",
-    "        'Remove a component of a specific type from an entity'\n",
+    "        \"\"\"Remove a component of a specific type from an entity\"\"\"\n",
     "        pass\n",
     "\n",
+    "    #  The `-> T` part indicates that the function returns a value of type `T`\n",
+    "    # - Since `T` is a generic type variable, it means that the return type of \n",
+    "    # this function is the same as the type passed to the `component_type` \n",
+    "    # parameter\n",
     "    @abstractmethod\n",
-    "    def get_component(self, entity, component_type: Type) -> object:\n",
-    "        'Get a component of a specific type from an entity'\n",
+    "    def get_component(self, entity, component_type: Type[T]) -> T:\n",
+    "        \"\"\"Get a component of a specific type from an entity\"\"\"\n",
     "        pass\n",
     "\n",
     "    @abstractmethod\n",
     "    def get_entities_with_component(self, component_type: Type) -> List[Entity]:\n",
-    "        'Get a list of entities that have A SINGLE SPECIFIC COMPONENT type'\n",
+    "        \"\"\"Get a list of entities that have A SINGLE SPECIFIC COMPONENT type\"\"\"\n",
     "        pass\n",
     "\n",
     "    @abstractmethod\n",
     "    def get_entities_with_all_components(self, component_types: List[Type]) -> List[Entity]:\n",
-    "        'Get a list of entities that have ALL of the specified COMPONENTS'\n",
+    "        \"\"\"Get a list of entities that have ALL of the specified COMPONENTS\"\"\"\n",
     "        pass\n",
     "\n",
     "\n",
@@ -249,10 +267,14 @@
     "        except KeyError:\n",
     "            raise ValueError(f'[ERROR] - tryied to [remove_component] - Component of type {component_type} does not exist on entity {entity.id}')\n",
     "\n",
-    "    def get_component(self, entity, component_type:Type) -> object:\n",
-    "        try :\n",
-    "            return self.components[entity.id].get(component_type, None)\n",
-    "        except KeyError:\n",
+    "    def get_component(self, entity, component_type:Type[T]) -> T:\n",
+    "        # Because `None` is not compatible with the expected return type `T`\n",
+    "        # - To fix this issue, you can use the `in` keyword to check if the  \n",
+    "        # `component_type` key exists in the `self.components[entity.id]`  \n",
+    "        # dictionary before returning its value\n",
+    "        if entity.id in self.components and component_type in self.components[entity.id]:\n",
+    "            return self.components[entity.id][component_type]\n",
+    "        else:\n",
     "            raise ValueError(f'[ERROR] - tryied to [get_component] - Component of type {component_type} does not exist on entity {entity.id}')\n",
     "    \n",
     "    def get_entities_with_component(self, component_type:Type) -> List[Entity]:\n",
@@ -294,15 +316,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
     "import math\n",
     "from numpy import random\n",
     "\n",
-    "def generate_circle(radius, num_points, func=lambda x:x)-> List[Tuple[float,float]]:\n",
-    "    'return a list of points that form a circle'\n",
+    "def generate_circle(radius:float, num_points:int, func:Callable[[float], float]=lambda x:x)-> List[Tuple[float,float]]:\n",
+    "    \"\"\"return a list of points that form a circle\"\"\"\n",
     "    points = []\n",
     "    angle = 2 * math.pi/num_points\n",
     "\n",
@@ -316,15 +338,86 @@
     "    return points\n",
     "\n",
     "def generate_asteroid(radius, num_points) -> List[Tuple[float,float]]:\n",
-    "    'return a list of points that form an asteroid by adding noise to radius'\n",
-    "    noise_lambda = lambda x: random.randint(int(x*0.5), x)\n",
+    "    \"\"\"return a list of points that form an asteroid by adding noise to radius\"\"\"\n",
+    "    # `numpy.random.uniform` function to generate noise with a more uniform \n",
+    "    # distribution between the minimum and maximum radii\n",
+    "    noise_lambda = lambda x: random.uniform(x*0.5, x)\n",
     "    points = generate_circle(radius, num_points, noise_lambda)\n",
     "    return points\n",
     "\n",
     "def generate_ship(radius) -> List[Tuple[float,float]]:\n",
-    "    'return a list of points that form a ship'\n",
+    "    \"\"\"return a list of points that form a ship\"\"\"\n",
     "    points = generate_circle(radius, 3)\n",
     "    return points"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### **SPAWN**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "SHIP_HEALTH = 1\n",
+    "SHIP_SIZE = 30\n",
+    "ASTEROID_HEALTH = 100\n",
+    "ASTEROID_SIZE = 100\n",
+    "ASTEROID_VERTICES = 15\n",
+    "ASTEROID_MAX_SPEED = 2\n",
+    "\n",
+    "def spawn_ship(component_manager: ComponentManager) -> None:\n",
+    "    'spawn a ship at the center of the screen'\n",
+    "    ship = Entity()\n",
+    "    ship_position = Position(\n",
+    "        int(RENDER_CONTEXT.WIDTH * 0.5), \n",
+    "        int(RENDER_CONTEXT.HEIGHT * 0.5)\n",
+    "    )\n",
+    "    ship_health = Health(SHIP_HEALTH)\n",
+    "    ship_points = generate_ship(SHIP_SIZE)\n",
+    "    ship_shape = Shape(ship_points)\n",
+    "\n",
+    "    component_manager.add_component(ship, ship_position)\n",
+    "    component_manager.add_component(ship, ship_health)\n",
+    "    component_manager.add_component(ship, ship_shape)\n",
+    "\n",
+    "def spawn_asteroid(component_manager: ComponentManager) -> None:\n",
+    "    'spawn an asteroid at a random positions'\n",
+    "    asteroid = Entity()\n",
+    "    asteroid_position = Position(\n",
+    "        random.randint(0, RENDER_CONTEXT.WIDTH), \n",
+    "        random.randint(0,RENDER_CONTEXT.HEIGHT)\n",
+    "    )\n",
+    "    asteroid_velocity = Velocity(\n",
+    "        random.randint(-ASTEROID_MAX_SPEED, ASTEROID_MAX_SPEED),\n",
+    "        random.randint(-ASTEROID_MAX_SPEED, ASTEROID_MAX_SPEED)\n",
+    "    )\n",
+    "    asteroid_rotation = Rotation(\n",
+    "        random.randint(0, 359)\n",
+    "    )\n",
+    "    asteroid_health = Health(ASTEROID_HEALTH)\n",
+    "    asteroid_points = generate_asteroid(\n",
+    "        random.randint(int(ASTEROID_SIZE * 0.5), ASTEROID_SIZE), \n",
+    "        ASTEROID_VERTICES\n",
+    "    )\n",
+    "    asteroid_shape = Shape(asteroid_points)\n",
+    "\n",
+    "    component_manager.add_component(asteroid, asteroid_position)\n",
+    "    component_manager.add_component(asteroid, asteroid_velocity)\n",
+    "    component_manager.add_component(asteroid, asteroid_rotation)\n",
+    "    component_manager.add_component(asteroid, asteroid_health)\n",
+    "    component_manager.add_component(asteroid, asteroid_shape)\n",
+    "\n",
+    "def spawn_asteroids(num_asteroids, component_manager:ComponentManager) -> None:\n",
+    "    'spawn a number of asteroids at random positions'\n",
+    "    for i in range(num_asteroids):\n",
+    "        spawn_asteroid(component_manager)"
    ]
   },
   {
@@ -340,7 +433,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# transforms\n",
+    "class Position:\n",
+    "    def __init__(self, x, y):\n",
+    "        self.x = x\n",
+    "        self.y = y\n",
+    "\n",
+    "class MovementSystem:\n",
+    "    def update(self, component_manager :ComponentManager, delta_time :float):\n",
+    "        entities = component_manager.get_entities_with_component(Position)\n",
+    "        for entity in entities:\n",
+    "            position = component_manager.get_component(entity, Position)\n",
+    "            position.x += 1 * delta_time\n",
+    "            position.y += 1 * delta_time"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -399,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -409,27 +523,10 @@
     "movement_system = MovementSystem()\n",
     "render_system = RenderSystem(context_sys.screen, context_sys.clock)\n",
     "\n",
-    "# Create asteroid\n",
-    "asteroid = Entity()\n",
-    "asteroid_position = Position(320, 240)\n",
-    "asteroid_health = Health(100)\n",
-    "asteroid_points = generate_asteroid(100, 10)\n",
-    "asteroid_shape = Shape(asteroid_points)\n",
-    "\n",
-    "component_manager.add_component(asteroid, asteroid_position)\n",
-    "component_manager.add_component(asteroid, asteroid_health)\n",
-    "component_manager.add_component(asteroid, asteroid_shape)\n",
-    "\n",
     "# Create ship\n",
-    "ship = Entity()\n",
-    "ship_position = Position(320, 240)\n",
-    "ship_health = Health(1)\n",
-    "ship_points = generate_ship(50)\n",
-    "ship_shape = Shape(ship_points)\n",
-    "\n",
-    "component_manager.add_component(ship, ship_position)\n",
-    "component_manager.add_component(ship, ship_health)\n",
-    "component_manager.add_component(ship, ship_shape)\n",
+    "spawn_ship(component_manager)\n",
+    "# Create asteroid\n",
+    "spawn_asteroids(5, component_manager)\n",
     "\n",
     "# Main game loop\n",
     "while True:\n",
